# semantic-scholar-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/semantic_scholar_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_server.py
