[project]
name = "semantic-scholar-mcp"
version = "1.0.0"
description = "MCP server for Semantic Scholar API - Access 200M+ academic papers in Claude Desktop"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Santiago Maniches", email = "santiago@topologica.ai"}
]
maintainers = [
    {name = "TOPOLOGICA LLC", email = "support@topologica.ai"}
]
requires-python = ">=3.10"
keywords = [
    "mcp", "semantic-scholar", "research", "papers", "citations",
    "academic", "literature", "claude", "anthropic", "ai-tools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://topologica.ai"
Documentation = "https://github.com/topologica-ai/semantic-scholar-mcp#readme"
Repository = "https://github.com/topologica-ai/semantic-scholar-mcp"
Issues = "https://github.com/topologica-ai/semantic-scholar-mcp/issues"
Changelog = "https://github.com/topologica-ai/semantic-scholar-mcp/releases"

[project.scripts]
semantic-scholar-mcp = "semantic_scholar_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_scholar_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
